Porting Processi di supporto
minor changes al file maint.tex
tolto un /itemize in più in "IntroduzioneENorme"

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
@@ -1,21 +1,25 @@
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+\title{Processi di Supporto}
+\author{caregnato.edoardo }
 \begin{document}
 \section{Processi di Supporto}
 
-\input{ProcessiDiSupporto/src/IntroduzioneENorme}
+\input{src/IntroduzioneENorme}
 \newpage
-\input{ProcessiDiSupporto/src/StrutturaDellaDocumentazione}
+\input{src/StrutturaDellaDocumentazione}
 \newpage
-\input{ProcessiDiSupporto/src/ClassificazioneDeiDocumenti}
+\input{src/ClassificazioneDeiDocumenti}
 \newpage
-\input{ProcessiDiSupporto/src/NormeTipografiche}
+\input{src/NormeTipografiche}
 \newpage
-\input{ProcessiDiSupporto/src/Strumenti}
+\input{src/Strumenti}
 \newpage
-\input{ProcessiDiSupporto/src/GestioneDellaConfigurazione}
+\input{src/GestioneDellaConfigurazione}
 \newpage
-\input{ProcessiDiSupporto/src/GestioneDellaQualita}
+\input{src/GestioneDellaQualita}
 \newpage
-\input{ProcessiDiSupporto/src/Validazione}
+\input{src/Validazione}
 \newpage
 
 \end{document}
