Porting Processi di supporto
Aggiustamenti sintattici, quali nome del gruppo, e fix problemi di layout di Latex

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -7,7 +7,7 @@ Il gruppo ha scelto di utilizzare la convenzione CamelCase con, in aggiunta, le 
 \end{itemize}
 
 \subsubsection{Elenchi puntati}
-Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo SWEleven rispetteranno le seguenti norme sintattiche:
+Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo SwEleven rispetteranno le seguenti norme sintattiche:
 \begin{itemize}
 	\item la frase che precede il primo elemento dell’elenco puntato, o se l’elemento precede a sua volta un sottoelenco, dovrà terminare con il carattere “:”;
 	\item ogni elemento dell’elenco deve cominciare con la lettera minuscola, ad eccezione dei nomi propri;
@@ -19,7 +19,7 @@ Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo SWEleven risp
 Per eliminare ambiguità linguistiche e formattare automaticamente le parole chiavi più importanti, è stato creato un glossario in Latex con nomenclatura nomegruppo.sty.
 
 \subsubsection{Sigle}
-In tutti i documenti prodotti dal gruppo SWEleven, si adotteranno le seguenti sigle per abbreviazione dei nomi più ricorrenti, quali:
+In tutti i documenti prodotti dal gruppo SwEleven, si adotteranno le seguenti sigle per abbreviazione dei nomi più ricorrenti, quali:
 \begin{itemize}
 	\item AdR: indica l’analisi dei requisiti;
 	\item NdP: indica le norme di progetto;
@@ -39,7 +39,7 @@ Tutte le tabelle saranno costruite secondo i seguenti standard:
 	\item l’header della tabella, avrà sfondo blu e colore di background bianco;
 	\item la prima parola di ogni cella avrà la lettera maiuscola;
 	\item per facilitare la lettura tra più righe, si differenzieranno le righe con indice pari da quelle dispari, alternando ciclicamente il colore bianco e grigio;
-	\item la tabella sarà in posizione centrata rispetto al documento.
+	\item la tabella sarà in posizione centrale rispetto al documento.
 \end{itemize}
 
 L’esempio sotto riportato riporta una tabella costruita secondo le disposizioni sopra-descritte:
@@ -53,7 +53,7 @@ Tutte le immagini utilizzate durante la stesura della documentazione, dovranno e
 	\item nomeimmagine indicherà il nome proprio dell’immagine;
 	\item estensione indicherà il formato dell’immagine (ex: jpg, png…).
 \end{itemize}
-Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, e posizionata in centro pagina.
+Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
 \subsubsection{Diagrammi UML}
 Ogni diagramma uml inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi uml sarà starUML
