--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
@@ -1,8 +1,8 @@
 \subsection{Classificazione dei documenti}
-Tutti i documenti prodotti dal gruppo SWEleven necessitano dell’approvazione del Responsabile di progetto prima della loro divulgazione.
+Tutti i documenti prodotti dal gruppo SwEleven necessitano dell’approvazione del Responsabile di progetto prima della loro divulgazione.
 
 \subsubsection{Documentazione Interna}
-La documentazione interna è un particolare tipo di documentazione che verrà divulgata solamente internamente al gruppo SWEleven. Fanno parte della documentazione interna i seguenti tipi di documenti:
+La documentazione interna è un particolare tipo di documentazione che verrà divulgata solamente internamente al gruppo SwEleven. Fanno parte della documentazione interna i seguenti tipi di documenti:
 \begin{itemize}
 	\item verbali Interni;
 	\item studio di fattibilità;
@@ -20,16 +20,16 @@ La documentazione esterna è un tipo di documentazione cui divulgazione sarà es
 \end{itemize}
 
 \subsubsection{Stesura dei verbali}
-Al momento della redazione del verbale, un membro del gruppo SWEleven sarà scelto, a rotazione, come Redattore dello stesso. Per ogni incontro del gruppo verrà prodotto un verbale ad uso, come specificato sopra, solamente interno. Una volta steso lo stesso ed approvato, non è prevista la possibilità di modifica dello stesso, in quanto richiederebbe una modifica di azioni e/o tecnologie già discusse in sedute precedenti in modo retroattivo. La struttura del verbale è qui descritta:
+Al momento della redazione del verbale, un membro del gruppo SwEleven sarà scelto, a rotazione, come Redattore dello stesso. Per ogni incontro del gruppo verrà prodotto un verbale ad uso, come specificato sopra, solamente interno. Una volta steso lo stesso ed approvato, non è prevista la possibilità di modifica dello stesso, in quanto richiederebbe una modifica di azioni e/o tecnologie già discusse in sedute precedenti in modo retroattivo. La struttura del verbale è qui descritta:
 \begin{itemize}
 	\item luogo svolgimento riunione;
 	\item data svolgimento riunione;
 	\item ora di inizio;
 	\item ora di fine;
-	\item membri del gruppo presenti con eventuali esterni;
+	\item membri del gruppo presenti con eventuali esterni.
 \end{itemize}
 
-A questo, segue l’Ordine del giorno, ovvero una descrizione sommaria degli argomenti da discutere nel corso del meeting. Successivamente, è trascritto il verbale della riunione, ovvero una descrizione più dettagliata di tutti gli argomenti discussi e decisioni prese durante il corso del meeting. Ogni verbale ha la seguente nomenclatura:
+A questo segue l’Ordine del giorno, ovvero una descrizione sommaria degli argomenti da discutere nel corso del meeting. Successivamente, è trascritto il verbale della riunione, ovvero una descrizione più dettagliata di tutti gli argomenti discussi e le decisioni prese durante il corso del meeting. Ogni verbale ha la seguente nomenclatura:
 \begin{center}
 	\textbf{Verbale_I/E_YYYY-MM-DD}
 \end{center}
