--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -16,7 +16,7 @@ Gli strumenti con cui si cercherà di perseguire la qualità sopra citata sono:
 \end{itemize}
 
 \subsection{Verifica}
-Con questo processo, il gruppo SwEleven si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione che a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati dal committente. 
+Con questo processo, il gruppo SwEleven si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione sia a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati dal committente. 
 \subsection{Aspettative della verifica}
 Il processo di verifica viene eseguito secondo i seguenti criteri:
 \begin{itemize}
@@ -53,7 +53,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
 Questi test si effettuano a seguito di una aggiunta o modifica al sistema, verificando la qualità di nuove versione di software scritte. Lo scopo primario è il test di tutte le nuove funzionalità implementate nel prodotto, verificando, inoltre, che le precedenti funzionalità già implementate abbiano mantenuto la loro logica e funzione.
 
 \subsubsection{Test di accetazione}
-Questi test vengono effettuati con la partecipazione del committente, cui compito è quello di verificare il prodotto per garantire il soddisfacimento del cliente. Il superamento di questo test, garantisce che il software è completamente collaudato e pronto per il rilascio.
+Questi test vengono effettuati con la partecipazione del committente, cui compito è quello di verificare il prodotto per garantire il soddisfacimento del cliente. Il superamento di questo test, garantisce che il software sia completamente collaudato e pronto per il rilascio.
 
 \subsection{Codice identificativo dei test}
 Ogni test prodotto dal gruppo SwEleven, adotterà la seguente nomenclatura:
