--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -4,16 +4,16 @@ Ogni documento prodotto che verrà consegnato assieme al software "nomesoftware"
 \subsubsection{Struttura prima pagina}
 La prima pagina del documento è così formata:
 \begin{itemize}
-	\item logo del gruppo: Il logo del gruppo SWEleven è visibile sulla prima pagina ed è posizionato al centro della stessa;
+	\item logo del gruppo: Il logo del gruppo SwEleven è visibile sulla prima pagina ed è posizionato al centro della stessa;
 	\item gruppo e progetto: Il nome del gruppo è visibile immediatamente sotto il logo. In aggiunta, è presente anche la lista dei nomi dei contributori dello specifico documento;
 	\item tabella: presente sotto il titolo del documento, racchiude le seguenti informazioni:
 	\begin{itemize}
 		\item versione: indica la versione del documento;
 		\item redattori: nome, cognome e matricola degli studenti incaricati della scrittura del documento in oggetto;
 		\item approvatori: nome, cognome e matricola degli studenti incaricati all’approvazione del documento in oggetto;
-		\item verificatori: nome, cognome e matricola degli studenti incaricati della verifica del documento in oggetto;
-		\item uso: marcatore d’ uso del documento, che può essere interno o esterno;
-		\item destinazione: indica i destinatari del documento in oggetto;
+		\item verificatori: nome, cognome e matricola degli studenti incaricati alla verifica del documento in oggetto;
+		\item uso: marcatore d’uso del documento, che può essere interno o esterno;
+		\item destinazione: indica i destinatari del documento in oggetto.
 		\end{itemize}
 	\end{itemize}
 	
@@ -24,7 +24,7 @@ Ogni documento riporta una sezione denominata con il nome sopracitato, recante u
 	\item data di modifica: identifica la data di ultima modifica del documento;
 	\item descrizione: sintetizza una descrizione della modifica apportata al documento;
 	\item nominativo: identifica lo studente, tramite nome e cognome, che ha apportato la modifica;
-	\item ruolo: identifica il ruolo dello studente che ha apportato la modifica;
+	\item ruolo: identifica il ruolo dello studente che ha apportato la modifica.
 \end{itemize}
 
 \subsubsection{Indice}
@@ -41,10 +41,10 @@ ciascuna, una breve descrizione ed il numero della pagina dove è collocata.
 La struttura delle pagine di contenuto è la seguente:
 \begin{itemize}
 	\item logo: il logo del gruppo è posizionato in alto a sinistra;
-	\item sezione: il nome e numero della sezione sono posizionati in centro alla pagina;
+	\item sezione: il nome ed il numero della sezione sono posizionati in centro alla pagina;
 	\item intestazione: è l’intestazione del documento;
 	\item contenuto: il contenuto principale del documento è posizionato dopo l’intestazione dello stesso;
-	\item numero pagina: presente in basso a destra, su ogni pagina ad esclusione della prima pagina;
+	\item numero pagina: presente in basso a destra, su ogni pagina ad esclusione della prima pagina.
 \end{itemize}
 
 
