--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Fornitura/main.tex
@@ -1,8 +1,8 @@
-\subsection{Scopo}\label{sec:Scopo}
+\subsubsection{Scopo}\label{sec:Scopo}
 \input{src/ProcessiPrimari/src/Fornitura/src/scopo.tex}
 
-\subsection{Attivit\`{a}}
+\subsubsection{Attivit\`{a}}
 \input{src/ProcessiPrimari/src/Fornitura/src/Attivita/main.tex}
 
-\subsection{Strumenti}
+\subsubsection{Strumenti}
 \input{src/ProcessiPrimari/src/Fornitura/src/Strumenti/main.tex}
