--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/main.tex
@@ -1,2 +1,5 @@
-\subsection{Attivit\`{a}}
+\subsubsection{Scopo}
+\input{src/ProcessiPrimari/src/Sviluppo/src/scopo.tex}
+
+\subsubsection{Attivit\`{a}}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/main.tex}
