--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/main.tex
@@ -1,8 +1,8 @@
-\subsubsection{Analisi dei requisiti}
-\input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti.tex}
+\myparagraph{Analisi dei requisiti}
+\input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/main.tex}
 
-\subsubsection{Progettazione}
-\input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione.tex}
+\myparagraph{Progettazione}
+\input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/main.tex}
 
-\subsubsection{Codifica}
+\myparagraph{Codifica}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica.tex}
