--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -6,6 +6,7 @@
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{charter}
 
 \usepackage{tabularx} 
 \usepackage{booktabs} % permette di poter usare delle liste nelle tabelle
