--- a/DocumentiInterni/StudioDiFattibilita/src/C7/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/main.tex
@@ -1,21 +1,20 @@
 \subsection{Informazioni generali}
-\input{src/Informazioni_generali.tex}
-
+\input{src/C7/src/Informazioni_generali.tex}
 
 \subsection{Descrizione}
-\input{src/Descrizione.tex}
+\input{src/C7/src/Descrizione.tex}
 
 \subsection{Finalità del progetto}
-\input{src/Finalita_del_progetto.tex}
+\input{src/C7/src/Finalita_del_progetto.tex}
 
 \subsection{Tecnologie interessate}
-\input{src/Tecnologie_interessate.tex}
+\input{src/C7/src/Tecnologie_interessate.tex}
 
 \subsection{Aspetti positivi}
-\input{src/Aspetti_positivi.tex}
+\input{src/C7/src/Aspetti_positivi.tex}
 
 \subsection{Criticità e fattori di rischio}
-\input{src/Criticita_e_fattori_di_rischio.tex}
+\input{src/C7/src/Criticita_e_fattori_di_rischio.tex}
 
 \subsection{Conclusioni}
-\input{src/Conclusioni.tex}
+\input{src/C7/src/Conclusioni.tex}
