Fix problemi Layout
Fix di alcuni problemi di layout nella sezione processi di Supporto

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
@@ -31,7 +31,7 @@ Al momento della redazione del verbale, un membro del gruppo SwEleven sarà scel
 
 A questo segue l’Ordine del giorno, ovvero una descrizione sommaria degli argomenti da discutere nel corso del meeting. Successivamente, è trascritto il verbale della riunione, ovvero una descrizione più dettagliata di tutti gli argomenti discussi e le decisioni prese durante il corso del meeting. Ogni verbale ha la seguente nomenclatura:
 \begin{center}
-	\textbf{Verbale_I/E_YYYY-MM-DD}
+\textbf{Verbale\_I/E\_ YYYY-MM-DD}\\
 \end{center}
 dove \textbf{I/E} rappresenta il tipo del verbale secondo la seguente sintassi:
 \begin{itemize}
