--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaConfigurazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaConfigurazione.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{Versionamento}
 Codifica della versione di un documento:
-ogni documento scritto, prima del suo effettivo completamento e validazione, viene incrementalmente steso in versioni. Ogni versione di un documento è contrassegnata con una nomenclatura prettamente numerica crescente, con tre cifre intere separate da un punto. Un esempio di codifica è la seguente: x.y.z, dove le lettere x,y e z indicano quanto segue:
+ogni documento scritto, prima del suo effettivo completamento e validazione, viene incrementalmente steso in versioni. Ogni versione di un documento è contrassegnata con una nomenclatura prettamente numerica crescente, con tre cifre intere separate da un punto. Un esempio di codifica è la seguente: \textbf{x.y.z}, dove le lettere \textbf{x.y e z} indicano quanto segue:
 \begin{itemize}
 	\item x indica una versione completa del documento, verificata e approvata dal responsabile. La prima versione del documento è contrassegnata con il numero “0” e va man mano incrementato durante le fasi di lavoro;
 	\item y indica una versione cui stesura è terminata ma è in attesa di verifica. Questo contatore parte sempre dal numero “0” e viene man mano incrementato dal verificatore al termine della verifica. Ogni volta che X viene incrementato, Y dovrà necessariamente ripartire da 0;
