--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -57,7 +57,7 @@ Questi test vengono effettuati con la partecipazione del committente, cui compit
 
 \subsection{Codice identificativo dei test}
 Ogni test prodotto dal gruppo SwEleven, adotterà la seguente nomenclatura:
-\begin{center}T[t] \end{center}
+\begin{center} \textbf{T[t]} \end{center}
 Dove:
 \begin{itemize}
 	\item T è una keyword statica per identificare appunto un “Test”
