--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -3,7 +3,11 @@ Il gruppo ha scelto di utilizzare la convenzione CamelCase con, in aggiunta, le 
 \begin{itemize}
 	\item nomi di file o cartelle dovranno necessariamente avere la prima lettera maiuscola;
 	\item i nomi composti di file o cartelle verranno scritti uniti, lasciando le iniziali delle relative parole maiuscole;
-	\item i nomi dei documenti utilizzeranno la seguente nomenclatura: \textbf{NomeDelFile_v. X.Y.Z}, dove X,Y e Z indicano la versione del documento;
+	\item i nomi dei documenti utilizzeranno la seguente nomenclatura:
+	\begin{center}
+	\textbf{NomeDelFile\_v.X.Y.Z}
+	\end{center}
+	dove X,Y e Z indicano la versione del documento;
 \end{itemize}
 
 \subsubsection{Elenchi puntati}
@@ -45,7 +49,9 @@ Tutte le tabelle saranno costruite secondo i seguenti standard:
 L’esempio sotto riportato riporta una tabella costruita secondo le disposizioni sopra-descritte:
 
 \subsubsection{Immagini}
-Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate in una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente: \textbf{N_nn_#_nomeimmagine.estensione}, dove:
+Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate in una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
+\textbf{N\_nn\_\#\_nomeimg.estensione}\\
+dove:
 \begin{itemize}
 	\item N indicherà la sezione dove verrà inserita l’immagine;
 	\item n indicherà la sottosezione dove verrà inserita l’immagine;
