--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -4,8 +4,8 @@ Ogni documento prodotto che verrà consegnato assieme al software "nomesoftware"
 \subsubsection{Struttura prima pagina}
 La prima pagina del documento è così formata:
 \begin{itemize}
-	\item logo del gruppo: Il logo del gruppo SwEleven è visibile sulla prima pagina ed è posizionato al centro della stessa;
-	\item gruppo e progetto: Il nome del gruppo è visibile immediatamente sotto il logo. In aggiunta, è presente anche la lista dei nomi dei contributori dello specifico documento;
+	\item logo del gruppo: il logo del gruppo SwEleven è visibile sulla prima pagina ed è posizionato al centro della stessa;
+	\item gruppo e progetto: il nome del gruppo è visibile immediatamente sotto il logo. In aggiunta, è presente anche la lista dei nomi dei contributori dello specifico documento;
 	\item tabella: presente sotto il titolo del documento, racchiude le seguenti informazioni:
 	\begin{itemize}
 		\item versione: indica la versione del documento;
