Completamento processi di supporto

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
@@ -1,8 +1,12 @@
-\documentclass{article}
+\documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{../../../../Shared/Sweleven}
+\usepackage{csquotes}
+\usepackage{graphicx}
 \title{Processi di Supporto}
 \author{caregnato.edoardo }
 \begin{document}
+\input{../../src/Comandi.tex}
 \section{Processi di Supporto}
 
 \input{src/IntroduzioneENorme}
