--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -4,7 +4,7 @@ Ogni documento prodotto che verrà consegnato assieme al software "nomesoftware"
 \subsubsection{Struttura prima pagina}
 La prima pagina del documento è così formata:
 \begin{itemize}
-	\item logo del gruppo: il logo del gruppo SwEleven è visibile sulla prima pagina ed è posizionato al centro della stessa;
+	\item logo del gruppo: il logo del gruppo {\Gruppo} è visibile sulla prima pagina ed è posizionato al centro della stessa;
 	\item gruppo e progetto: il nome del gruppo è visibile immediatamente sotto il logo. In aggiunta, è presente anche la lista dei nomi dei contributori dello specifico documento;
 	\item tabella: presente sotto il titolo del documento, racchiude le seguenti informazioni:
 	\begin{itemize}
@@ -28,7 +28,7 @@ Ogni documento riporta una sezione denominata con il nome sopracitato, recante u
 \end{itemize}
 
 \subsubsection{Indice}
-Ogni documento prodotto dal gruppo SWEleven contiene, all’inizio dello stesso, un indice, cui scopo è quello di esplicitare le parti gerarchiche che compongono il documento in oggetto. 
+Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice, cui scopo è quello di esplicitare le parti gerarchiche che compongono il documento in oggetto. 
 
 \subsubsection{Elenco immagini}
 I documenti muniti di figure saranno provvisti di un indice delle figure contenute, con una breve descrizione della stessa ed il numero della pagina dove è collocata.
