--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -1,7 +1,7 @@
 \subsection{Gestione della qualità}
 Per la trattazione approfondita della gestione della qualità del software o documentazione prodotta, si farà riferimento all’apposita documentazione PdQ, dove verranno descritte le metodologie atte al raggiungimento di una qualità generale il più possibilmente eccellente. Nello specifico, vengono trattate le seguenti tematiche:
 \begin{itemize}
-	\item gli standard utilizzati;
+	\item gli standard utilizzati;{\Gruppo}
 	\item le funzionalità del software più significative per il progetto. 
 In aggiunta, per ogni processo verranno descritti dettagliatamente:
 	\item gli obiettivi;
@@ -16,7 +16,7 @@ Gli strumenti con cui si cercherà di perseguire la qualità sopra citata sono:
 \end{itemize}
 
 \subsection{Verifica}
-Con questo processo, il gruppo SwEleven si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione sia a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati dal committente. 
+Con questo processo, il gruppo {\Gruppo} si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione sia a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati dal committente. 
 \subsection{Aspettative della verifica}
 Il processo di verifica viene eseguito secondo i seguenti criteri:
 \begin{itemize}
@@ -38,7 +38,7 @@ Le due metodologie per effettuare l’analisi statica sono le seguenti:
 Questa analisi, contrariamente a quella statica, prevede una esecuzione del prodotto ed una serie di test, anche automatizzati, per verificare la correttezza generale del codice. Siccome richiede l’esecuzione del software scritto, verrà fatta solamente dopo l’attività di scrittura del codice del progetto.
 
 \subsection{Test}
-Come già lievemente accennato nel capitolo precedente, durante la fase di analisi dinamica, il gruppo SwEleven potrà ricorrere all’uso di test automatizzati per un riscontro qualitativo del software scritto. Questi test hanno il compito di dimostrare che il programma scritto produce un output conforme a quanto richiesto dal committente, oltre a rilevare eventuali errori prima che il prodotto software venga immesso nel mercato. I test che saranno messi in atto dal gruppo SwEleven, saranno descritti nel corso di questo capitolo.
+Come già lievemente accennato nel capitolo precedente, durante la fase di analisi dinamica, il gruppo {\Gruppo} potrà ricorrere all’uso di test automatizzati per un riscontro qualitativo del software scritto. Questi test hanno il compito di dimostrare che il programma scritto produce un output conforme a quanto richiesto dal committente, oltre a rilevare eventuali errori prima che il prodotto software venga immesso nel mercato. I test che saranno messi in atto dal gruppo {\Gruppo}, saranno descritti nel corso di questo capitolo.
 
 \subsubsection{Test di unità}
 Scopo di questo test è la verifica degli algoritmi scritti su appunto una unità di codice precedentemente scelta. Questa fase di test si avvale di driver, ovvero simulatori di chiamate o azioni di un utente, e stub, che simula a sua volta una unità chiamata.
@@ -56,7 +56,7 @@ Questi test si effettuano a seguito di una aggiunta o modifica al sistema, verif
 Questi test vengono effettuati con la partecipazione del committente, cui compito è quello di verificare il prodotto per garantire il soddisfacimento del cliente. Il superamento di questo test, garantisce che il software sia completamente collaudato e pronto per il rilascio.
 
 \subsection{Codice identificativo dei test}
-Ogni test prodotto dal gruppo SwEleven, adotterà la seguente nomenclatura:
+Ogni test prodotto dal gruppo {\Gruppo}, adotterà la seguente nomenclatura:
 \begin{center} \textbf{T[t]} \end{center}
 Dove:
 \begin{itemize}
