--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/IntroduzioneENorme.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/IntroduzioneENorme.tex
@@ -1,6 +1,6 @@
 \subsection{Introduzione e Norme}
 \subsubsection{Introduzione e Norme di Realizzazione del documento}
-Lo scopo di questa documentazione è quello di definire standard e nomenclatura dei documenti prodotti dal gruppo “SwEleven” volti alla realizzazione del progetto didattico di Ingegneria del Software.
+Lo scopo di questa documentazione è quello di definire standard e nomenclatura dei documenti prodotti dal gruppo {\Gruppo}  volti alla realizzazione del progetto didattico di Ingegneria del Software.
 Il seguente documento, in maniera del tutto similare a tutti gli altri documenti prodotti, segue il seguente ciclo di vita:
 \begin{itemize}
 \item creazione: il documento viene inizialmente creato, usando un template unico per tutta la documentazione reperibile nei repository del progetto. Successivamente, durante la prima stesura, il creatore redige il documento in maniera incrementale, aggiungendo e, eventualmente, specificando tutte le funzionalità che si andranno ad implementare nel progetto;
@@ -8,4 +8,4 @@ Il seguente documento, in maniera del tutto similare a tutti gli altri documenti
 \item approvazione: il documento ha superato con successo la fase di revisione, ed è pronto per essere caricato nell’apposita sezione nel repository o rilasciato per la consultazione.
 \end{itemize}
 \subsubsection{Template documentazione SwEleven}
-Per uniformare i documenti che verranno prodotti durante lo sviluppo del software, il gruppo ha scelto di adottare un template Latex per velocizzare la stesura degli stessi, riducendo il notevole spreco di concentrazione dedicato alla costruzione iniziale di un documento.
+Per uniformare i documenti che verranno prodotti durante lo sviluppo del software, il gruppo ha scelto di adottare un template \LaTeX{} per velocizzare la stesura degli stessi, riducendo il notevole spreco di concentrazione dedicato alla costruzione iniziale di un documento.
