--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -11,7 +11,7 @@ Il gruppo ha scelto di utilizzare la convenzione CamelCase con, in aggiunta, le 
 \end{itemize}
 
 \subsubsection{Elenchi puntati}
-Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo SwEleven rispetteranno le seguenti norme sintattiche:
+Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo {\Gruppo} rispetteranno le seguenti norme sintattiche:
 \begin{itemize}
 	\item la frase che precede il primo elemento dell’elenco puntato, o se l’elemento precede a sua volta un sottoelenco, dovrà terminare con il carattere “:”;
 	\item ogni elemento dell’elenco deve cominciare con la lettera minuscola, ad eccezione dei nomi propri;
@@ -20,10 +20,10 @@ Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo SwEleven risp
 \end{itemize}
 
 \subsubsection{Glossario}
-Per eliminare ambiguità linguistiche e formattare automaticamente le parole chiavi più importanti, è stato creato un glossario in Latex con nomenclatura nomegruppo.sty.
+Per eliminare ambiguità linguistiche e formattare automaticamente le parole chiavi più importanti, è stato creato un glossario in \LaTeX{} con nomenclatura nomegruppo.sty.
 
 \subsubsection{Sigle}
-In tutti i documenti prodotti dal gruppo SwEleven, si adotteranno le seguenti sigle per abbreviazione dei nomi più ricorrenti, quali:
+In tutti i documenti prodotti dal gruppo {\Gruppo}, si adotteranno le seguenti sigle per abbreviazione dei nomi più ricorrenti, quali:
 \begin{itemize}
 	\item AdR: indica l’analisi dei requisiti;
 	\item NdP: indica le norme di progetto;
@@ -36,8 +36,8 @@ In tutti i documenti prodotti dal gruppo SwEleven, si adotteranno le seguenti si
 	\item RA: indica la Revisione di Accettazione.
 \end{itemize}
 
-\subsubsection{Tabelle}
-Il gruppo SwEleven, durante la stesura della documentazione necessaria al progetto, potrebbe far ampio uso di tabelle riassuntive, per dare un carattere meno prolisso alla documentazione e facilitare la lettura della stessa.
+\subsubsection{Tabelle}{\Gruppo}
+Il gruppo {\Gruppo}, durante la stesura della documentazione necessaria al progetto, potrebbe far ampio uso di tabelle riassuntive, per dare un carattere meno prolisso alla documentazione e facilitare la lettura della stessa.
 Tutte le tabelle saranno costruite secondo i seguenti standard:
 \begin{itemize}
 	\item l’header della tabella, avrà sfondo blu e colore di background bianco;
@@ -47,6 +47,20 @@ Tutte le tabelle saranno costruite secondo i seguenti standard:
 \end{itemize}
 
 L’esempio sotto riportato riporta una tabella costruita secondo le disposizioni sopra-descritte:
+
+    \rowcolors{2}{\evenRowColor}{\oddRowColor}
+    \renewcommand{\arraystretch}{1.5}
+    \centering
+    \begin{longtable}{ c c  C{4cm}  c  c }
+        \rowcolor{\primaryColor}
+        \textcolor{\secondaryColor}{
+        \textbf{Header 1}}     & \textcolor{\secondaryColor}{\textbf{Header 2}}       & \textcolor{\secondaryColor}
+        {\textbf{Header 3}} & \textcolor{\secondaryColor}{\textbf{Header 4}} & \textcolor{\secondaryColor}{\textbf{Header 5}}                          \\
+        Testo esempio                 & Testo esempio                                    & Testo esempio                                & Testo esempio & Testo esempio{} \\
+        Testo esempio                & Testo esempio                                    & Testo esempio                                   & Testo esempio & Testo esempio{} \\
+        Testo esempio                & Testo esempio                                    & Testo esempio                          & Testo esempio & Testo esempio{}    \\
+    \end{longtable}
+
 
 \subsubsection{Immagini}
 Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate in una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
