--- a/DocumentiEsterni/Glossario/src/Comandi.tex
+++ b/DocumentiEsterni/Glossario/src/Comandi.tex
@@ -1,22 +1,15 @@
 \newcommand{\Titolo}{Glossario}
 
-\newcommand{\Prodotto}{TODO}
-
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{TODO \newline TODO \newline TODO}
-\newcommand{\Verificatori}{TODO \newline TODO}
+\newcommand{\Verificatori}{TODO}
+\newcommand{\Redattori}{TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
 \newcommand{\Versionedoc}{X.X.X}
 
-\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
+\newcommand{\Distribuzione}{Prof. Tullio Vardanega  \newline Prof. Riccardo Cardin  \newline TODO \newline Sweleven }
 
-\newcommand{\Uso}{Interno}
+\newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{TODO.}
-
-\newcommand{\TermineGlossario}[1]{\textbf{#1}\\}
-\newcommand{\DefinizioneGlossario}[1]{#1\\ \\}
-\newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}\\}
-\newcommand{\mysubparagraph}[1]{\subparagraph{#1}\mbox{}\\}
+\newcommand{\DescrizioneDoc}{TODO}
