--- a/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
@@ -1,3 +1,4 @@
+
 \subsection{Informazioni generali}
 \input{src/C2/src/Informazioni_generali.tex}
 
@@ -5,16 +6,16 @@
 \input{src/C2/src/Descrizione.tex}
 
 \subsection{Finalità del progetto}
-\input{src/C2//src/Finalita_del_progetto.tex}
+\input{src/C2/src/Finalita_del_progetto.tex}
 
 \subsection{Tecnologie interessate}
-\input{src/C2//src/Tecnologie_interessate.tex}
+\input{src/C2/src/Tecnologie_interessate.tex}
 
 \subsection{Aspetti positivi}
-\input{src/C2//src/Aspetti_positivi.tex}
+\input{src/C2/src/Aspetti_positivi.tex}
 
 \subsection{Criticità e fattori di rischio}
-\input{src/C2//src/Criticita_e_fattori_di_rischio.tex}
+\input{src/C2/src/Criticita_e_fattori_di_rischio.tex}
 
 \subsection{Conclusioni}
-\input{src/C2//src/Conclusioni.tex}
+\input{src/C2/src/Conclusioni.tex}
