--- a/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
@@ -1,6 +1,5 @@
-\section{Capitolato C2}
 \subsection{Progettazione e sviluppo di una Realtime Gaming Platform(RGP)}
-Il capitolato in questione si chiama "Progettazione e sviluppo di una \glo{Real-time Gaming Platform(RGP)}", il proponente è l'azienda Zero12 e i committenti sono \VT{} e \CR{}.
+Il capitolato in questione si chiama "Progettazione e sviluppo di una {Real-time Gaming Platform(RGP)}", il proponente è l'azienda Zero12 e i committenti sono Tullio Vardanega e Cardin Riccardo.
 
 \subsection{Descrizione del capitolo}
 L’azienda Zero12 propone la creazione di un \glo{Realtime system} per la \glo{sincronizzazione} di un gioco a scorrimento verticale,multiplayer ed un'applicazione \glo{Android} o \glo{iOS} con finalità di \glo{testing} del sistema software creato che gestisce le varie compnenti(RGP).
