--- a/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
@@ -8,10 +8,14 @@
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{0.0.5}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega  \newline Prof. Riccardo Cardin  \newline Sweleven}
 
 \newcommand{\Uso}{Interno}
 
 \newcommand{\DescrizioneDoc}{TODO}
+
+\newcommand{\NdPv}{Norme di Progetto \Versionedoc}
+\newcommand{\Glossariov}{Glossario \Versionedoc}
+\usepackage{comment}
