--- a/DocumentiInterni/StudioDiFattibilita/src/RegistroModifiche.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/RegistroModifiche.tex
@@ -13,8 +13,9 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
+        0.0.1                  & 2020-12-4                                       & stesura documento iniziale e di C6 & Elvis Murtezan & \responsabile{} \\
+        0.0.2                  & 2020-12-11                                       & stesura C1 e C4   					& Giovanni & \redattore{} \\
+        0.0.3                  & 2020-12-11                                       & stesura C3 e C7    					& Andrea & \redattore{}    \\
+		0.0.4                  & 2020-12-11                                       & stesura C2 e C5                     & Abdel & \redattore{}    \\
     \end{longtable}
 }
