uniform subseqtion title

--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -2,7 +2,7 @@
 \subsection{Infomazioni generali}
 Il capitolato in questione si chiama "BlockCOVID: supporto digitale al contrasto della pandemia", il proponente è l'azienda Imola Informatica ed i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 
-\subsection{Descrizione del capitolo}
+\subsection{Descrizione del capitolato}
 Nel contesto della continua diffusione della pandemia di COVID-19, l'obbiettivo di questo capitolato riguarda il tracciamento delle postazioni nell'ambito di un laboratorio informatico. In particolare questo progetto richiede la creazione di una applicazione mobile che, in comunicazione con un server centralizzato, sia in grado di tracciare l'utilizzo delle postazoni di lavoro, così come la loro stessa pulizia.
 
 \subsection{Prerequisiti e tecnologie coinvolte}
