--- a/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
@@ -2,7 +2,7 @@
 \subsection{Informazioni generali}
 \input{src/C2/src/Informazioni_generali.tex}
 
-\subsection{Descrizione}
+\subsection{Descrizione del capitolato}
 \input{src/C2/src/Descrizione.tex}
 
 \subsection{Finalità del progetto}
