--- a/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
@@ -1,7 +1,7 @@
-\subsection{Progettazione e sviluppo di una Realtime Gaming Platform(RGP)}
+\subsection{Informazini generali}
 Il capitolato in questione si chiama "Progettazione e sviluppo di una {Real-time Gaming Platform(RGP)}", il proponente è l'azienda Zero12 e i committenti sono Tullio Vardanega e Cardin Riccardo.
 
-\subsection{Descrizione del capitolo}
+\subsection{Descrizione del capitolato}
 L’azienda Zero12 propone la creazione di un \glo{Realtime system} per la \glo{sincronizzazione} di un gioco a scorrimento verticale,multiplayer ed un'applicazione \glo{Android} o \glo{iOS} con finalità di \glo{testing} del sistema software creato che gestisce le varie compnenti(RGP).
 La finalità da parte dell’azienda è vedere alcune tecnologie di AWS in azione nell' ambito real-time ovvero la sincronizzazione dei giocatori in un gioco multiplayer a scorrimento verticale "infinito".
 \subsection{Prerequisiti e tecnologie coinvolte}
