--- a/DocumentiInterni/StudioDiFattibilita/src/C7/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/main.tex
@@ -1,7 +1,7 @@
 \subsection{Informazioni generali}
 \input{src/C7/src/Informazioni_generali.tex}
 
-\subsection{Descrizione}
+\subsection{Descrizione del capitolato}
 \input{src/C7/src/Descrizione.tex}
 
 \subsection{Finalità del progetto}
