--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -2,7 +2,7 @@
 \subsection{Infomazioni generali}
 Il capitolato in questione si chiama "HD Viz: visualizzazione di dati multidimensionali", il proponente è l'azienda Zucchetti ed i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 
-\subsection{Descrizione del capitolo}
+\subsection{Descrizione del capitolato}
 Il progetto richiede di creare una piattaforma web in grado di fornire diversi tipi di visualizzazioni grafiche di un gran numero di dati con molte dimensioni, a supporto della fase esplorativa di questi e della loro analisi. 
 L’azienda proponente è particolarmente interessata a verificare la fattibilità di questo obbiettivo attraverso le tecnologie web.
 
