Minor changes per compilare con il template

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/main.tex
@@ -1,29 +1,28 @@
-\documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{../../../../Shared/Sweleven}
-\usepackage{csquotes}
-\usepackage{graphicx}
-\title{Processi di Supporto}
-\author{caregnato.edoardo }
-\begin{document}
-\input{../../src/Comandi.tex}
-\section{Processi di Supporto}
+%\documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
+%\usepackage[utf8]{inputenc}
+%\usepackage{../../../../Shared/Sweleven}
+%\usepackage{csquotes}
+%\usepackage{graphicx}
+%\author{caregnato.edoardo }
+%\begin{document}
+%\input{../../src/Comandi.tex}
+%\section{Processi di Supporto}
 
-\input{src/IntroduzioneENorme}
+\input{src/ProcessiDiSupporto/src/IntroduzioneENorme}
 \newpage
-\input{src/StrutturaDellaDocumentazione}
+\input{src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione}
 \newpage
-\input{src/ClassificazioneDeiDocumenti}
+\input{src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti}
 \newpage
-\input{src/NormeTipografiche}
+\input{src/ProcessiDiSupporto/src/NormeTipografiche}
 \newpage
-\input{src/Strumenti}
+\input{src/ProcessiDiSupporto/src/Strumenti}
 \newpage
-\input{src/GestioneDellaConfigurazione}
+\input{src/ProcessiDiSupporto/src/GestioneDellaConfigurazione}
 \newpage
-\input{src/GestioneDellaQualita}
+\input{src/ProcessiDiSupporto/src/GestioneDellaQualita}
 \newpage
-\input{src/Validazione}
+\input{src/ProcessiDiSupporto/src/Validazione}
 \newpage
 
 \end{document}
