--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/main.tex
@@ -1,3 +1,6 @@
+\mysubparagraph{Scopo}
+\input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/scopo.tex}
+
 \mysubparagraph{Classificazione dei requisiti}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex}
 
