--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -16,5 +16,5 @@
 
 \newcommand{\DescrizioneDoc}{TODO.}
 
-\newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}\\}
-\newcommand{\mysubparagraph}[1]{\subparagraph{#1}\mbox{}\\}
+\newcommand{\myparagraph}[1]{\paragraph{#1}}
+\newcommand{\mysubparagraph}[1]{\subparagraph{#1}}
