Correzione di errori

--- a/DocumentiInterni/Verbali/20201222/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/20201222/src/TracciamentoDecisioni/main.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}
-    \item Unifomare stile documenti
-    \item Inserire commenti delle revisioni sulla Pull Request
-    \item Rotazione del responsabile tra revisioni
+    \item Unifomare gli stili dei documenti
+    \item Inserire i commenti delle revisioni sulla Pull Request
+    \item Rotazione del responsabile tra le revisioni
 \end{enumerate}
