--- a/DocumentiInterni/Verbali/20201222/src/Informazioni/src/OrdineDelGiorno/main.tex
+++ b/DocumentiInterni/Verbali/20201222/src/Informazioni/src/OrdineDelGiorno/main.tex
@@ -1,4 +1,4 @@
 \begin{enumerate}
-    \item Discussione sulla verifica delle norme di progetto
-    \item Discussione sulla verifica degli studi di fattibilità
+    \item Discutere sulla verifica delle norme di progetto
+    \item Discutere sulla verifica degli studi di fattibilità
 \end{enumerate}
