Iniziata correzione capitolato C1

--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -3,15 +3,16 @@
 Il capitolato in questione si chiama "BlockCOVID: supporto digitale al contrasto della pandemia", il proponente è l'azienda Imola Informatica ed i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 
 \subsection{Descrizione del capitolato}
-Nel contesto della continua diffusione della pandemia di COVID-19, l'obbiettivo di questo capitolato riguarda il tracciamento delle postazioni nell'ambito di un laboratorio informatico. In particolare questo progetto richiede la creazione di una applicazione mobile che, in comunicazione con un server centralizzato, sia in grado di tracciare l'utilizzo delle postazoni di lavoro, così come la loro stessa pulizia.
+Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo di questo capitolato riguarda il tracciamento delle postazioni nell'ambito di un laboratorio informatico. In particolare questo progetto richiede la creazione di una piattaforma che sia in grado di gestire e tracciare efficacemente l'utilizzo delle postazoni di lavoro, così come la pulizia delle stesse.
 
 \subsection{Prerequisiti e tecnologie coinvolte}
 Prerequisiti:
 \begin{itemize}
-\item Competenze nello sviluppo di applicazionei mobile;
-\item Competenze lato \glo{client}/\glo{server};
-\item Studio delle tecnologie e librerie proposte;
-\item Conoscenza funzionamento e protocolli \glo{RFID};
+\item Competenza nello sviluppo di applicazionei mobile;
+\item Competenza nella programmazione e strutturazione di un \glo{server};
+\item Competenza nella costruzione e configurazione di comunicazioni di rete;
+\item Conoscenza adeguata delle tecnologie e librerie proposte;
+\item Conoscenza riguardo il funzionamento di strumenti di riconoscimento fisico, quali \glo{RFID};
 \end{itemize}
 
 Tecnologie coinvolte:
