fix leggibilità coclusioni

--- a/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
@@ -47,6 +47,6 @@ Tecnologie coinvolte:
 \end{itemize}
 \subsection{Conclusioni}
 La proposta del capitolato offerto dall'azienda Zero12 è stata accolta con grande interesse. Il gruppo è rimasto colpito e stimolato dalla possibilità 
-di poter creare una RGP visto anche il crescente interesse nel settore a livello mondiale. Nonostante la tecnologia Android esista da molti anni è risultata particolarmente 
-interessante da parte del gruppo, sia perché è supportata da un'ampia community di sviluppatori, sia perché per il gruppo è una tecnologia nuova che non viene 
-trattata da nessun corso della laurea triennale. Dopo una prima analisi è stato in ballottaggio per la scelta finale da parte del gruppo.
+di poter creare una RGP visto anche il crescente interesse nel settore a livello mondiale. Nonostante la tecnologia Android esista da molti anni è risultata molto
+interessante al gruppo, sia perché è supportata da un'ampia community di sviluppatori ed è una tecnologia nuova che non viene trattata da nessun corso della laurea triennale. Dopo una prima analisi è stato in ballottaggio per la scelta finale da parte del gruppo.
+
