--- a/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
@@ -1,5 +1,5 @@
 \subsection{Scopo del Documento}
-Questo documento contiene la stesura dello studio di fattibilità riguardante i sei capitolati proposti, dove per ciascuno di essi vengono evidenziati i seguenti aspetti:
+Questo documento contiene la stesura dello studio di fattibilità riguardante i sette capitolati proposti, dove per ciascuno di essi vengono evidenziati i seguenti aspetti:
 \begin{itemize}
     \item Titolo del capitolato;
     \item Descrizione generale;
@@ -8,11 +8,10 @@ Questo documento contiene la stesura dello studio di fattibilità riguardante i 
     \item Aspetti positivi;
     \item Aspetti critici.
 \end{itemize}
-Infine, per ogni capitolato vengono esposte le motivazioni e le ragioni per cui il gruppo ha scelto come progetto il capitolato C1 \NomeProgetto{} a discapito degli altri sei proposti.
-
+Infine, per ogni capitolato vengono esposte le motivazioni e le ragioni per cui il gruppo ha scelto come progetto il capitolato C1 \NomeProgetto{}, in particolare l’interesse del gruppo a tale capitolato è stato cruciale nella decisone finale.
 \subsection{Glossario}
-Al fine di evitare ambiguità fra i termini, e per avere chiare fra tutti gli stakeholder le terminologie utilizzate per la realizzazione del presente documento, il gruppo Sweleven ha redatto un documento denominato \Glossariov.
-In tale documento, sono presenti tutti i termini tecnici, ambigui, specifici del progetto e scelti dai membri del gruppo con le loro relative definizioni.
+Al fine di evitare ambiguità tra stakeholder, il gruppo Sweleven ha redatto un documento denominato \Glossariov, che definisce la terminologia utilizzata per la realizzazione del presente documento.
+In tale documento, sono presenti tutti i termini tecnici, ambigui, specifici del progetto con le loro relative definizioni.
 Un termine presente nel \Glossariov e utilizzato in questo documento viene indicato con un apice G alla fine della parola.
 \subsection{Riferimenti}
 
@@ -28,7 +27,7 @@ Un termine presente nel \Glossariov e utilizzato in questo documento viene indic
 \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf}
 \item \textbf {Capitolato d'appalto C2 - Emporio Lambda}\\
 \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C2.pdf}
-\item \textbf {Capitolato d'appalto C3 - Gathering Detection Platform }\\
+\item \textbf {Capitolato d'appalto C3 - Gathering Detection Platform}\\
 \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C3.pdf}
 \item \textbf {Capitolato d'appalto C4 - HD Viz }\\
 \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C4.pdf}
